tests/NormalTests/paczka2/big_fuzzy/43081948.err
Error in line 5: A716 A52 91,5
Error in line 13: A716 A495 12,4
Error in line 7: XkQoGRmow S519 64,7
Error in line 20: jc1NjgWrh A52 74,3
Error in line 31: jc1NjgWrh S519 00,4
Error in line 33: jc1NjgWrh S519 234,7
Error in line 34: jc1NjgWrh A52 97,2
Error in line 23: A716 A716 65,8
Error in line 42: A716 S519 97,2
Error in line 47: A716 A52 94,0
Error in line 46: HLZ A52 0,0
Error in line 59: jc1NjgWrh A52 25,0
Error in line 63: jc1NjgWrh A495 48,7
Error in line 69: zejU62 A52 54,7
Error in line 65: jc1NjgWrh A716 63,5
Error in line 75: XkQoGRmow S519 0,0
Error in line 88: zejU62 A52 89,8
Error in line 85: jc1NjgWrh A495 56,9
Error in line 96: jc1NjgWrh A52 37,1
Error in line 130: zejU62 A52 76,2
Error in line 131: zejU62 S519 15,9
Error in line 127: dD8BSN A716 207,3
Error in line 134: dD8BSN A495 46,9
Error in line 153: jc1NjgWrh A716 39,7
Error in line 157: jc1NjgWrh S519 20,3
Error in line 175: XkQoGRmow A495 302,6
Error in line 176: XkQoGRmow A52 69,3
Error in line 180: A716 A52 41,3
Error in line 181: XkQoGRmow A495 42,7
Error in line 189: 5PVWX8KS A52 95,7
Error in line 196: XkQoGRmow S51o 80,3
Error in line 195: A716 A52 93,4
Error in line 205: 5PVWX8KS A495 98,9
Error in line 191: zejU62 S519 148,3
Error in line 210: XkQoGRmow S519 93,1
Error in line 199: A716 A495 97,7
Error in line 220: A716 S519 94,2
Error in line 223: A716 A716 10,4
Error in line 226: HLZ A52 ,7,1
Error in line 225: A716 S519 38,2
Error in line 232: 5PVWX8KS A716 63,9
Error in line 234: XkQoGRmow A52 54,3
Error in line 240: dD8BSN A495 61,8
Error in line 218: zejU62 A495 13,9
